--- a/TP1.ipynb
+++ b/TP1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <p style=\"text-align: center;\"> Alunos: <br> Ana Luisa Rodrigues - 2014137530 <br> Matheus Vargas - 2014144812</div>\n"
+    "### <p style=\"text-align: center;\"> Alunos: <br> Ana Luisa Rodrigues - 2014137530 <br> Matheus Vargas - 2014144812\n"
    ]
   },
   {
