Atualização de código
Código pronto!

--- a/TP1.ipynb
+++ b/TP1.ipynb
@@ -18,8 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p><font size=\"5\" color=\"red\" face=\"Lucida Console\">ONDE ESTÁ</font></p>\n",
-    "<p><font size=\"6\" color=\"blue\" face=\"Lucida Console\">Wally?</font></p>"
+    "<p style=\"text-align: center;\"><font size=\"5\" color=\"red\" face=\"Lucida Console\">ONDE ESTÁ</font></p>\n",
+    "<p style=\"text-align: center;\"><font size=\"6\" color=\"blue\" face=\"Lucida Console\">Wally?</font></p>"
    ]
   },
   {
@@ -28,13 +28,13 @@
    "source": [
     "O objetivo deste trabalho prático é a implementação do Chroma Key, uma sobreposição de imagens com fundo verde sobre um fundo arbitrário, com a utilização do notebook Jupyter e a linguagem Python. </p>\n",
     "\n",
-    "Inicialmente selecionamos 4 imagens com fundo verde ('dilma.jpg', 'dog.jpg', 'mario.jpg', 'minion.jpg') e uma imagem para servir como fundo para a composição ('fundo.jpg'), uma segunda sequência de imagens foi selecionada afim de criar uma espécie de bônus ao jogo. As imagens de fundo verde foram escolhidas aleatoriamente enquanto a imagem de fundo é a ideia clássica do \"jogo\" de encontrar as imagens no desenho \"Onde está Wally?\". </p> \n",
+    "Inicialmente selecionamos 8 imagens com fundo verde ('dilma.jpg', 'dog.jpg', 'mario.jpg', 'minion.jpg', 'glasses.jpg', 'minecraft.jpg', 'shark.jpg' e 'simpson.jpg') e uma imagem para servir como fundo para a composição ('fundo.jpg'). As imagens de fundo verde foram escolhidas aleatoriamente enquanto a imagem de fundo é a ideia clássica do \"jogo\" de encontrar as imagens no desenho \"Onde está Wally?\". </p> \n",
     "\n",
     "O projeto será dividido em 4 partes: \n",
-    "<li>Aplicação de operações sobre as imagens afim de dificultar a identificação destas no fundo escolhido</li>\n",
-    "<li>Aplicação do Chroma Key nas imagens de fundo verde </li>\n",
-    "<li>Combinação de todas as imagens no fundo e formação de uma única imagem </li>\n",
-    "<li>Exibição da imagem resultante</li>"
+    "   - Aplicação de operações radiométricas, geométricas e filtros nas imagens;\n",
+    "   - Aplicação do Chroma Key nas imagens de fundo verde;\n",
+    "   - Combinação de todas as imagens no fundo e formação de uma única imagem;\n",
+    "   - Exibição da imagem resultante."
    ]
   },
   {
@@ -52,114 +52,29 @@
    "source": [
     "import skimage\n",
     "import skimage.io as io\n",
-    "import skimage.color as skic\n",
-    "import skimage.filters as skif\n",
-    "import skimage.data as skid\n",
-    "import skimage.util as sku\n",
-    "import matplotlib.pyplot as plt\n",
+    "import skimage.color as color\n",
+    "import skimage.filters as filters\n",
+    "import skimage.data as data\n",
+    "import skimage.util as util\n",
     "from skimage.morphology import erosion\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import PIL\n",
+    "from PIL import Image\n",
+    "from PIL import ImageFilter\n",
+    "from PIL import ImageEnhance\n",
     "import numpy as np\n",
-    "\n",
     "from scipy import ndimage\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "# Plota a imagem passada como parametro\n",
     "def show(img):\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(8, 8))\n",
     "    ax.imshow(img, cmap=plt.cm.gray)\n",
     "    ax.set_axis_off()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Parte I - Aplicação de operações sobre as imagens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_dilma = io.imread('images/dilma.jpg')\n",
-    "\n",
-    "show(img_dilma)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ao se carregar a imagem da Dilma, pode-se perceber que ela possui marcas de expressão e que a qualidade da imagem não está muito boa. Para melhorar esses dois fatores, será aplicado o filtro Gaussiano para suavização. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smooth_image = filters.gaussian(img_dilma, 1.5)\n",
-    "show(smooth_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_dog = io.imread('images/dog.jpg')\n",
-    "\n",
-    "show(img_dog)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A imagem do cachorro será rotacionada horizontalmente e depois em 30 graus e será aplicado o filtro de realce, já que a imagem está muito suavizada."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rotate_hor_dog = np.fliplr(img_dog)\n",
-    "show(rotate_hor_dog)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rotate_30_dog = ndimage.rotate(rotated_dog, 30, reshape=False)\n",
-    "show(rotate_30_dog)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import PIL\n",
-    "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "###### Funções utilizadas #########\n",
-    "\n",
-    "\n",
+    "    plt.show()\n",
+    "    \n",
     "# Redimensiona a imagem passada como paramentro\n",
     "# de acordo com o tamanho base\n",
     "def resize_img(img, basewidth):\n",
@@ -168,8 +83,8 @@
     "    return img.resize((basewidth, hsize), PIL.Image.ANTIALIAS)\n",
     "    \n",
     "    \n",
-    "# Plota a imagem passada como parametro\n",
-    "def show_img(img):\n",
+    "# Plotar o fundo em escala maior\n",
+    "def show_background(img):\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(20, 20))\n",
     "    ax.imshow(img, cmap=plt.cm.gray)\n",
     "    ax.set_axis_off()\n",
@@ -191,15 +106,24 @@
     "                r_tochange, g_tochange, b_tochange = rgb_bgimg.getpixel((col + x_offset, row + y_offset))\n",
     "                img.putpixel((col, row), (r_tochange, g_tochange, b_tochange))\n",
     "    return img\n",
-    "    "
+    "\n",
+    "# transformar imagem do tipo Array para RGB\n",
+    "def transform_to_rgb(img):\n",
+    "    image = Image.fromarray(img, \"RGB\")\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parte I - Aplicação de operações sobre as imagens"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Carrega as imagens necessárias\n",
@@ -211,16 +135,97 @@
     "img_glasses = Image.open('images/glasses.jpg')\n",
     "img_mario = Image.open('images/mario.jpg')\n",
     "img_minion = Image.open('images/minion.jpg')\n",
-    "img_shark = Image.open('images/shark.jpg')\n",
+    "img_shark = Image.open('images/shark.jpg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ao se carregar a imagem da Dilma, pode-se perceber que ela possui marcas de expressão e que a qualidade da imagem não está muito boa. Para melhorar esses dois fatores, será aplicado um filtro para suavização. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show(img_dilma)\n",
     "\n",
+    "transf_dilma = img_dilma.filter(ImageFilter.BLUR)\n",
+    "show(transf_dilma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A imagem do cachorro será rotacionada horizontalmente e será aplicado o filtro de aguçamento já que a imagem está muito suavizada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show(img_dog)\n",
     "\n",
+    "# rotacionar\n",
+    "rotate_hor_dog = np.fliplr(img_dog)\n",
+    "\n",
+    "# transformar de array para RGB\n",
+    "rgb_dog = transform_to_rgb(rotate_hor_dog)\n",
+    "\n",
+    "# filtro aguçamento\n",
+    "transf_dog = rgb_dog.filter(ImageFilter.SHARPEN)\n",
+    "show(transf_dog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O brilho da imagem do minecraft será aumentado já que a imagem está muito escura."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show(img_minecraft)\n",
+    "\n",
+    "# aumentar brilho da imagem\n",
+    "enhancer = ImageEnhance.Brightness(img_minecraft)\n",
+    "transf_minecraft = enhancer.enhance(1.5)\n",
+    "show(transf_minecraft)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parte II - Aplicação do Chroma Key nas imagens de fundo verde"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "#Armazena os parametros do Background\n",
     "img_bg_w, img_bg_h = img_bg.size\n",
     "\n",
     "#Redefine o tamanho da imagem\n",
-    "imgdog_resized = resize_img(img_dog, 85)\n",
-    "imgdilma_resized = resize_img(img_dilma,100)\n",
-    "imgminecraft_resized = resize_img(img_minecraft,280)\n",
+    "imgdog_resized = resize_img(transf_dog, 85)\n",
+    "imgdilma_resized = resize_img(transf_dilma,100)\n",
+    "imgminecraft_resized = resize_img(transf_minecraft,280)\n",
     "imgsimpson_resized = resize_img(img_simpson, 185)\n",
     "imgglasses_resized = resize_img(img_glasses,40)\n",
     "imgmario_resized = resize_img(img_mario, 185)\n",
@@ -245,8 +250,22 @@
     "imgglasses_processed = remove_background(imgglasses_resized, img_bg, glasses_offset)\n",
     "imgmario_processed = remove_background(imgmario_resized, img_bg, mario_offset)\n",
     "imgminion_processed = remove_background(imgminion_resized, img_bg, minion_offset)\n",
-    "imgshark_processed = remove_background(imgshark_resized, img_bg, shark_offset)\n",
-    "\n",
+    "imgshark_processed = remove_background(imgshark_resized, img_bg, shark_offset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parte III - Combinação de todas as imagens no fundo e formação de uma única imagem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Adiciona a imagem no BG\n",
     "img_bg.paste(imgdog_processed, dog_offset)\n",
     "img_bg.paste(imgdilma_processed, dilma_offset)\n",
@@ -255,11 +274,25 @@
     "img_bg.paste(imgglasses_processed, glasses_offset)\n",
     "img_bg.paste(imgmario_processed, mario_offset)\n",
     "img_bg.paste(imgminion_processed, minion_offset)\n",
-    "img_bg.paste(imgshark_processed, shark_offset)\n",
-    "\n",
+    "img_bg.paste(imgshark_processed, shark_offset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parte IV - Exibição da imagem resultante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plota a imagem\n",
-    "show_img(img_bg)\n",
-    "#img_bg.save('result.jpg')"
+    "show_background(img_bg)\n",
+    "img_bg.save('result.jpg')"
    ]
   },
   {
@@ -268,14 +301,28 @@
    "source": [
     "<p><font size=\"5\" color=\"red\" face=\"Lucida Console\">Desafio</font></p>\n",
     "<p>Você consegue encontrar:</p>\n",
-    "<li>O Nelson Muntz dos Simpsons? (Dica: Ele está aprontando algo!) </li>\n",
-    "<li>O zumbi do Minecraft? Niguém parece ter visto ainda... </li>\n",
-    "<li>O Mário? Que Mário?</li>\n",
-    "<li>Um rapaz está com um par de óculos estiloso... Estilo Turn Down for What</li>\n",
-    "<li>Quem disse que um Minion não pode ir a praia?</li>\n",
-    "<li>Reza a lenda que Dilmãe está estocando ar por aí!</li>\n",
-    "<li>Quem não gosta de cachorros?</li>\n",
-    "<li>Você consegue identificar o que não faz parte do fundo padrão?</li>"
+    " - O Nelson Muntz dos Simpsons? (Dica: Ele está aprontando algo!) \n",
+    " - O zumbi do Minecraft? Niguém parece ter visto ainda... \n",
+    " - O Mário? Que Mário?\n",
+    " - Um rapaz está com um par de óculos estiloso... Estilo Turn Down for What\n",
+    " - Quem disse que um Minion não pode ir a praia?\n",
+    " - Reza a lenda que Dilmãe está estocando ar por aí!\n",
+    " - Quem não gosta de cachorros?\n",
+    " - Andou na prancha, cuidado o tubarão vai te pegar!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solução"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Não achou alguma imagem nessa confusão e não aguenta mais procurar? Aqui está a solução do problema:"
    ]
   },
   {
@@ -284,16 +331,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_answer = Image.open('images/resposta.jpg')\n",
-    "show_img(img_answer)"
+    "img_answer = Image.open('./images/answer.png')\n",
+    "show_background(img_answer)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
