--- a/TP1.ipynb
+++ b/TP1.ipynb
@@ -26,9 +26,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O objetivo deste trabalho prático é a implementação do Chroma Key, uma sobreposição de imagens com fundo verde sobre um fundo arbitrário, com a utilização do notebook Jupyter e a linguagem Python. </p>\n",
+    "O objetivo deste trabalho prático é a implementação do Chroma Key, uma sobreposição de imagens com fundo verde sobre um fundo arbitrário, com a utilização do notebook Jupyter e a linguagem Python.\n",
     "\n",
-    "Inicialmente selecionamos 8 imagens com fundo verde ('dilma.jpg', 'dog.jpg', 'mario.jpg', 'minion.jpg', 'glasses.jpg', 'minecraft.jpg', 'shark.jpg' e 'simpson.jpg') e uma imagem para servir como fundo para a composição ('fundo.jpg'). As imagens de fundo verde foram escolhidas aleatoriamente enquanto a imagem de fundo é a ideia clássica do \"jogo\" de encontrar as imagens no desenho \"Onde está Wally?\". </p> \n",
+    "Inicialmente selecionamos 8 imagens com fundo verde ('dilma.jpg', 'dog.jpg', 'mario.jpg', 'minion.jpg', 'glasses.jpg', 'minecraft.jpg', 'shark.jpg' e 'simpson.jpg') e uma imagem para servir como fundo para a composição ('fundo.jpg'). As imagens de fundo verde foram escolhidas aleatoriamente enquanto a imagem de fundo é a ideia clássica do \"jogo\" de encontrar as imagens no desenho \"Onde está Wally?\". \n",
     "\n",
     "O projeto será dividido em 4 partes: \n",
     "   - Aplicação de operações radiométricas, geométricas e filtros nas imagens;\n",
